--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@yuzu-health/yuzui",
+  "type": "module",
   "version": "0.0.1",
   "main": "/src/all.css",
   "repository": {
@@ -17,9 +18,11 @@
     "dist"
   ],
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "postcss-nesting": "^12.0.0",
-    "rollup": "^2.0.6",
-    "rollup-plugin-postcss": "^2.9.0"
+    "postcss-preset-env": "^9.0.0",
+    "rollup": "^3.26.3",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
